# aws-sam-lambda-docker-101

./: Dockerfile  app.py  pyproject.toml
