[tool.poetry]
name = "aws-sam-lambda-docker-101"
version = "0.1.0"
description = ""
authors = ["sh1un <a0923183408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "^1.34.98"
pymupdf = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
